[project]
name = "sssp"
version = "0.1.0"
description = "Reference / prototype implementation of the BMSSP recursive partitioning SSSP algorithm (Duan et al., 2025)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13.4"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = []


[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "coverage>=7.10.6",
    "pytest>=8.4.2",
]


[dependency-groups]
dev = [
    "black>=25.9.0",
    "coverage>=7.10.6",
    "pytest>=8.4.2",
]


[project.scripts]
sssp = "sssp.main:main"


[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
